[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
